200-K8s-Hands-On/05-Ingress/manifests/10-namespace.yaml
# Create a namespace
apiVersion: v1
kind: Namespace
metadata:
  name: $NAMESPACE
