200-K8s-Hands-On/05-Ingress/manifests/12-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: $COLOR-$VERSION-svc
  namespace: $COLOR-ns
  labels:
    service: $COLOR-$VERSION-svc
    color: $COLOR-svc
spec:
  selector:
    app: $COLOR-$VERSION
  type: ClusterIP
  # type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  # externalIPs: 
  #   - 198.19.0.100
