200-K8s-Hands-On/05-Ingress/manifests/13-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: $COLOR-ingress
  namespace: $COLOR-ns
spec:
  ingressClassName: nginx
  rules:
  - host: $COLOR.isociel.com
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: $COLOR-$VERSION-svc
              port:
                number: 80
